--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,23 @@ $border-colors: (
     4: hsl(212, 86%, 64%)
 );
 
-
+@keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
 
 body{
     font-family: 'Poppins', sans-serif;
@@ -74,8 +90,20 @@ body{
             text-align: left;
             box-shadow: 0 6px 15px $GrayishBlue;
             max-height: 250px;
+            -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+            -webkit-animation-timing-function: ease-in-out;
+            animation-timing-function: ease-in-out;
+            animation-iteration-count: infinite;
+            -webkit-animation-iteration-count: infinite;
 
-            
+            &:hover{
+                cursor: pointer;
+                animation-name: bounce;
+                -moz-animation-name: bounce;
+            }
 
             h2{
                 font-size: 1.5rem;
